--- a/index.html
+++ b/index.html
@@ -111,17 +111,18 @@
     </section>
 
     <!-- Resume -->
-    <section class="background-color" id="Resume">
+    <section class="background-color " id="Resume">
       <hr class="secondary-color"/>
-  <div class="container text-center">
+  <div class="container text-center ">
       <h2 class="text-color fw-bold fs-1">Summary</h2>
     <p class="text-color">This is my Portfolio Project, I am Jason Quigg a web developer</p>
     <img src="./assets/Profile Pic.jpg" height="400" alt="" />
   </div>
 
 
-  <div class="container">
-<div class="row">
+  <div class="container ">
+<div class="row ">
+  <div class=" col-1 col-lg-3">
     <h1 class="text-color">Education</h1>
     <ul class="text-color">
       <li>HND - Computer games development</li>
@@ -133,25 +134,24 @@
     </ul>
   </div>
 
-  <div class="row">
+  <div class="col-lg-3 col-sm-12 ">
     <h1 class="text-color">Work Experience</h1>
     <ul class="text-color">
       <li>
-        <h2>2023 - Present Sales assisstant</h2>
+        <h6>2023 - Present Sales assisstant</h6>
         <p>Sales assistant for Cash converters in Dundee</p>
       </li>
       <li>
-        <h2>2020-2020 Security</h2>
+        <h6>2020-2020 Security</h6>
         <p>Security for Football games, Concerts, Nightclubs</p>
       </li>
       <li>
-        <h2>2016-2019 Royal Navy WS SSM</h2>
+        <h6>2016-2019 Royal Navy WS SSM</h6>
         <p>(Sonar Operator on UK A class Nuclear Submarines)</p>
       </li>
     </ul>
   </div>
-
-  <div class="row">
+    <div class="col-lg-3 col-sm-12">
     <h1 class="text-color">skills</h1>
     <ul class="text-color">
       <li>Teamwork &#9733; &#9733; &#9733; &#9733; &#9733;</li>
@@ -161,20 +161,22 @@
       <li>Communication &#9733; &#9733; &#9733; &#9733;</li>
     </ul>
   </div>
-
-  <div class="row">
+    <div class="col-lg-3 col-sm-12 ">
     <h1 class="text-color">Awards</h1>
     <ul class="text-color">
       <li>Black belt Karate</li>
       <li>Won $400 playing a paladins tourney on Mixer (rip mixer)</li>
     </ul>
+  </div>
 </div>
   </div>
 
     </section>
 
     <!-- About Me -->
-    <section id="About-Me"></section>
+    <section id="About-Me">
+      
+    </section>
 
     <!-- Contact -->
     <section id="Contact"></section>
